Opened 10 years ago

Closed 10 years ago

#11517 closed bug (fixed)

[FontDemo] font cycling is broken

Reported by: diver Owned by: nobody
Priority: normal Milestone: R1
Component: Applications Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev48396

Clicking "Cycle fonts" starts doing it thing for several seconds but then stops with InstalledStyles(0), Font(Regular), Style(Regular) (from Terminal)

Change History (1)

comment:1 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev48398.

Note: See TracTickets for help on using tickets.