FontDemo: fix overwriting of family with style.

Menus were wrongly set to SetLabelFromMarked (probably from a previous
version of the UI without the nested font menu).

Fixes #11517.